syntax = "proto3";
package cosmonaut.bzedgev5.scavenge;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/bzedgev5/x/scavenge/types";

// Msg defines the Msg service.
service Msg {
      rpc SubmitScavenge(MsgSubmitScavenge) returns (MsgSubmitScavengeResponse);
  rpc CommitSolution(MsgCommitSolution) returns (MsgCommitSolutionResponse);
  rpc RevealSolution(MsgRevealSolution) returns (MsgRevealSolutionResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgSubmitScavenge {
  string creator = 1;
  string solutionHash = 2;
  string description = 3;
  string reward = 4;
}

message MsgSubmitScavengeResponse {
}

message MsgCommitSolution {
  string creator = 1;
  string solutionHash = 2;
  string solutionScavengerHash = 3;
}

message MsgCommitSolutionResponse {
}

message MsgRevealSolution {
  string creator = 1;
  string solution = 2;
}

message MsgRevealSolutionResponse {
}

// this line is used by starport scaffolding # proto/tx/message